# pyinstaller-versionfile

./: .gitchangelog.rc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: CI.yml  release.yml
docs/: conf.py  index.html  index.rst
src/pyinstaller_versionfile/: __init__.py  __main__.py  create_version_file.py  exceptions.py  main.py  metadata.py  version_file_template.txt  writer.py
test/: conftest.py  test_basic_tests.py  version_file.spec
test/integrationtest/: test_commandline.py  test_pyinstaller.py
test/resources/: VERSION.txt  acceptancetest_expected_versionfile.txt  acceptancetest_metadata.yml  cut_short_metadata.yml  empty_metadata.yml  metadata_reference_to_other_file.yml  metadata_with_additional_information.yml  metadata_with_translations.yml  not_a_mapping.yml  not_a_yaml_file.txt  testapp.py  testapp.spec
test/unittest/: test_api.py  test_distribution.py  test_main.py  test_metadata.py  test_versionfile.py  test_writer.py
