[tool.poetry]
name = "pyinstaller_versionfile"
version = "2.1.1"
description = "Create a windows version-file from metadata stored in a simple self-written YAML file or obtained from an installed distribution."
authors = ["Andreas Finkler"]
license = "MIT"
readme = "README.md"
include = [
    "CHANGELOG.md",
    "LICENSE",
    "tox.ini",
    "pylintrc",
    "test"
]
repository = "https://github.com/DudeNr33/pyinstaller-versionfile"
homepage = "https://github.com/DudeNr33/pyinstaller-versionfile"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]

[tool.poetry.scripts]
create-version-file = "pyinstaller_versionfile.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.4"
PyYAML = "^6.0.2"
packaging = "^24.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^74.1.2"
pylint = "^3.2.7"
pytest = "^8.3.3"
tox = "^4.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
